[package]
name = "atopio-extra"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A Rust crate providing extra utilities for surrealdb."
repository = "https://github.com/Atopio/atopio-extra"
keywords = ["surrealdb", "database", "utilities"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
surrealdb = { version = "2.4.0", default-features = false }
